--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/oauth": "^0.9.1",
     "@types/passport": "^1.0.11",
     "@types/passport-discord": "^0.1.6",
+    "axios": "^1.3.3",
     "canvas": "^2.11.0",
     "chalk": "4.1.2",
     "connect-mongo": "^4.6.0",
